fix modal on mobile

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,9 +7,8 @@ body {
 .title {
     background: #fff url('https://images.pexels.com/photos/1249214/pexels-photo-1249214.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940') center/cover no-repeat ;
     max-height: 500px;
-    padding: 40px 0 30px;
+    padding: 20px 0 10px;
     width: 100%;
-    margin-bottom: 30px;
     text-align: center;
     &__heading {
         font-size: 3rem;
@@ -86,8 +85,9 @@ body {
         display: block;
     }
     &__game-end {
-        padding: 20px;
+        padding: 10px;
         max-width: 800px;
+        max-height: 80%;
         text-align: center;
         background-color: white;
         position: relative;
@@ -95,13 +95,12 @@ body {
         left: 50%;
         transform: translate(-50%, -50%);
         &-output {
-            margin: 20px;
-            font-size: 1.3rem;
+            margin: 10px;
+            font-size: 1rem;
         }
-
         &-table {
             overflow-y: auto;
-            max-height: 300px;
+            max-height: 200px;
             margin-bottom: 20px;
             table {
                 margin: 20px auto; 
@@ -121,13 +120,13 @@ body {
         max-width: 800px;
         text-align: center;
         background-color: white;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         position: relative;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        display: flex;
-        flex-direction: column;
-        align-items: center;
         &-input {
             font-size: 1.3rem;
             padding: 20px;
@@ -175,6 +174,17 @@ body {
             font-size: 1.5rem;
             padding: 20px;
             width: 200px;
+        }
+        &__game-end {
+            padding: 20px;
+            &-output {
+                margin: 20px;
+                font-size: 1.3rem;
+            }
+            &-table {
+                max-height: 300px;
+                margin-bottom: 20px;
+            }
         }
     }
 }
